--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <title>Joachim Duplat - Portfolio</title>
     <meta name="description" content="Full Stack Developer Portfolio - Joachim Duplat">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <script type="module" crossorigin src="/build/assets/app.js"></script>
-    <link rel="stylesheet" crossorigin href="/build/assets/app.css">
+    <script type="module" crossorigin src="/build/assets/app-5PwEf9Y6.js"></script>
+    <link rel="stylesheet" crossorigin href="/build/assets/app-DeDnJxOv.css">
 </head>
 <body>
     <div id="app"></div>
